# CourseProject-F19-Pager

./: .__afs3967  .__afs6C34  .__afs8D9E  .__afsAAA6  .gdbinit  CMakeLists.txt  Makefile  OverflowOutput.txt  README.md  SUBMIT  auto_test.sh  buggy_output.txt  clean_and_run.sh  correct.txt  pager.out  shakespeare.txt  testFResClean.4.cpp  testFUnrefClean.4.cpp  testFUnrefDirty.4.cpp  testFileName1.4.cpp  testFileName2.4.cpp  testFork1.4.cpp  testFork2.4.cpp  testNonEmpty1.4.cpp  testNonEmpty2.4.cpp  testNonEmpty3.4.cpp  testNonEmpty4.4.cpp  testOverFlow.4.cpp  testOverFlow1.4.cpp  testSEvi.4.cpp  testSResClean.4.cpp  testSResDir.4.cpp  testSUnrefClean.4.cpp  testSUnrefDir.4.cpp  testSwitch1.4.cpp  testSwitch2.4.cpp  testSwitch3.4.cpp  testSwitch4.4.cpp  testbasic1.4.cpp  testbasic2.4.cpp  (+10 more)
.gitignore/: .gitignore
