cmake_minimum_required(VERSION 3.12)
project(eecs_482_p3)

set(CMAKE_CXX_STANDARD 14)
SET(GCC_COVERAGE_COMPILE_FLAGS "-g -Wall -fno-builtin -Wl,--no-as-needed -ldl -pthread")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )

add_executable(pager vm_pager.h vm_pager.cpp vm_arena.h libvm_pager.o)
add_executable(testbasic1.4 testbasic1.4.cpp libvm_app.o vm_app.h)
add_executable(testbasic2.4 testbasic2.4.cpp libvm_app.o vm_app.h)
add_executable(testbasic3.4 testbasic3.4.cpp libvm_app.o vm_app.h)
add_executable(testbasic4.4 testbasic4.4.cpp libvm_app.o vm_app.h)
add_executable(testFUnrefClean.4 testFUnrefClean.4.cpp libvm_app.o vm_app.h)
add_executable(testSUnrefDir.4.cpp testSUnrefDir.4.cpp libvm_app.o vm_app.h)
add_executable(testSResDir.4.cpp testSResDir.4.cpp libvm_app.o vm_app.h)
add_executable(testSResClean testSResClean.4.cpp libvm_app.o vm_app.h)
add_executable(testSEvi testSEvi.4.cpp libvm_app.o vm_app.h)
add_executable(testFUnrefDirty testFUnrefDirty.4.cpp libvm_app.o vm_app.h)
add_executable(testFResClean testFResClean.4.cpp libvm_app.o vm_app.h)
add_executable(testFUnrefClean testFUnrefClean.4.cpp libvm_app.o vm_app.h)
add_executable(testSUnrefClean.4 testSUnrefClean.4.cpp libvm_app.o vm_app.h)
add_executable(testspec testspec.4.cpp libvm_app.o vm_app.h)
add_executable(testfile1.4 testfile1.4.cpp libvm_app.o vm_app.h)
add_executable(testSwitch1.4 testSwitch1.4.cpp libvm_app.o vm_app.h)
add_executable(testSwitch2.4 testSwitch2.4.cpp libvm_app.o vm_app.h)
add_executable(testSwitch3.4 testSwitch3.4.cpp libvm_app.o vm_app.h)